# rust-otp

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: release.yml
.otp_vault/: vault_state.json
.otp_vault/pads/available/: f1ecae6e-5415-4dbc-abff-11f55f309ee9.pad
.roo/: README.md
otp-cli/: .otp_state.json  ARCHITECTURE.md  Cargo.toml  README.md  plaintext.txt
otp-cli/common-develop/.roo/rules/: 01-context-loading.md  02-unified-linting.md  03-clean-git-status.md  04-no-clippy-allows.md
otp-cli/src/: crypto.rs  lib.rs  main.rs  pad_generator.rs  state_manager.rs
otp-cli/tests/: advanced_features.rs  encryption_decryption.rs
otp-core/: ARCHITECTURE.md  Cargo.toml  README.md  test.pad
otp-core/src/: crypto.rs  lib.rs  pad_generator.rs  state_manager.rs
otp-core/tests/: advanced_features.rs  crypto_tests.rs  encryption_decryption.rs
otp-gui/: Cargo.toml  MANUAL_TESTING.md  README.md  index.html
otp-gui/src/: main.js
otp-gui/src-tauri/: Cargo.toml  tauri.conf.json
otp-gui/src-tauri/src/: main.rs
otp-gui/src-tauri/src-tauri/: tauri.conf.json
otp-gui/tests/: gui_build.rs  gui_workflow.rs
otp-web/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
otp-web/src/: main.rs
precompiled_binaries/: otp-cli  otp-web  sha256sums.txt
src/: main.rs
static/: index.html  main.js
