[package]
name = "otp-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for performing One-Time Pad (OTP) encryption and decryption."
license = "AGPL-3.0-or-later"
repository = "https://github.com/apezoo/rust-otp"
readme = "README.md"
keywords = ["otp", "encryption", "security", "crypto", "one-time-pad"]
categories = ["cryptography", "command-line-utilities"]

[lints]
workspace = true

[dependencies]
otp-core = { path = "../otp-core" }
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
uuid = { version = "1.8", features = ["v4"] }
