[package]
name = "otp-core"
version = "0.1.0"
edition = "2024"
description = "Core cryptographic library for One-Time Pad (OTP) operations."
license = "AGPL-3.0-or-later"
repository = "https://github.com/apezoo/rust-otp"
readme = "README.md"
keywords = ["otp", "encryption", "security", "crypto", "one-time-pad"]
categories = ["cryptography", "command-line-utilities", "web-programming"]

[lints]
workspace = true

[dependencies]
log = "0.4.27"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
