[package]
name = "otp-web"
version = "0.1.0"
edition = "2024"
[lints]
workspace = true

[dependencies]
otp-core = { path = "../otp-core" }
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
local-ip-address = "0.6.1"
uuid = { version = "1.8", features = ["v4"] }
