[package]
name = "otp-web"
version = "0.1.0"
edition = "2024"
description = "Web server for managing and using One-Time Pads (OTP)."
license = "AGPL-3.0-or-later"
repository = "https://github.com/apezoo/rust-otp"
readme = "README.md"
keywords = ["otp", "encryption", "security", "crypto", "one-time-pad"]
categories = ["cryptography", "web-programming"]

[lints]
workspace = true

[dependencies]
otp-core = { path = "../otp-core" }
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
local-ip-address = "0.6.1"
uuid = { version = "1.8", features = ["v4"] }
once_cell = "1.19.0"
mime_guess = "2.0.4"
rust-embed = "8.3.0"
